Add production Admin Dashboard, Role-Based Security, and Docker deployment setup